--- a/ACNH_Helper/templates/registration/login.html
+++ b/ACNH_Helper/templates/registration/login.html
@@ -5,7 +5,7 @@
 {% block back_url %}"/"{% endblock %}
 
 {% block content %}
-    <div class="mx-auto w-75">
+    <div class="card mx-auto w-75">
         {% load crispy_forms_tags %}
         <h3 class="text-center">Log In <small class="text-muted">to start tracking your island's progress!</small></h3>
         <hr class="col-8">
